fixed social icon and menu wrapping problem

--- a/css/yotfh.css
+++ b/css/yotfh.css
@@ -249,3 +249,6 @@ background-color: #000;
     width: 100%;
     height: 100%;
 }
+#social ul li {
+    padding:0;
+}
